--- a/app/components/slideshow/style.scss
+++ b/app/components/slideshow/style.scss
@@ -10,7 +10,7 @@ html, body, .app, .main
 {
   position: relative;
   width: 100%;
-  margin: 0 auto;
+  margin: 200 auto;
   height: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -82,6 +82,7 @@ html, body, .app, .main
   border-radius: 50%;
   cursor: pointer;
   transition: transform ease-in .1s;
+  z-index: 0;
 
   &:hover
   {
