--- a/app/containers/Home/home-style.css
+++ b/app/containers/Home/home-style.css
@@ -5,3 +5,18 @@
     height: '100%';
     background-color: 'red';
 }
+
+.slider-container
+{
+    margin-top: 120px;
+    width: 100%;
+    height: 70vh;
+}
+
+@media (max-height: 768px)
+{
+    .slider-container
+    {
+        height: 500px;
+    }
+}
